# NeuroFlow

./: .gitignore  DEPLOYMENT.md  README.md  render.yaml  run_app.bat  vercel.json
.github/workflows/: deploy.yml
backend/: app.py  auth.py  chat_service.py  chat_socket.py  database.py  debug_log.txt  encryption.py  main.py  ml_service.py  models.py  pyproject.toml  requirements.txt  seed_cloud_datasets.py  test_chat.py  test_import.py  vercel.json
frontend/: .env.development  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/components/: AuthContext.tsx  ChatInterface.tsx  ChatPanel.tsx  DataTableModal.tsx  DatasetAnalysisModal.tsx  DocumentationPage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResultDashboard.tsx  Sidebar.tsx  TemplatesPage.tsx  WorkspaceDashboard.tsx
frontend/src/components/nodes/: ClassBalancingNode.tsx  CrossValidationNode.tsx  DatasetNode.tsx  DuplicateNode.tsx  EncodingNode.tsx  FeatureEngineeringNode.tsx  FeatureSelectionNode.tsx  ImputationNode.tsx  ModelNode.tsx  OutlierNode.tsx  PCANode.tsx  PreprocessingNode.tsx  ResultNode.tsx  SplitNode.tsx  StepPreview.tsx  ViewDatasetNode.tsx
frontend/src/hooks/: usePipeline.ts
frontend/src/utils/: notebookGenerator.ts
